---------------------------------------------------------------------------------------------------
Version: 0.2.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.4
Date: 2023-11-07
  Changes:
    - Added a remote call for other mods to make their burner or heat-powered entities sped up by the mod. Simply add remote.call("speedup-burners", "addBurner", "entity-name") (or the same but with "addHeater" instead of burner) in on_init and on_configuration_changed.
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2023-11-06
  Changes:
    - Text plates compatibility patch
    - New menu simulation
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2023-11-05
  Balancing:
    - Made automation science a bit more expensive, because it was too much cheaper than logistic science
  Bugfixes:
    - Fixed a few localization issues
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2023-11-05
  Bugfixes:
    - Fixed long inserters trying to put items in invisible beacons
    - Slightly buffed burner inserters
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2023-11-04
  Features:
    - New ore refining loop
  Changes:
    - Burner inserters are now burner again, but are twice as fast
    - Inserter fuel leech is now a dependency - it makes it possible to actually build stuff with burner inserters.
---------------------------------------------------------------------------------------------------
Version: 0.1.12
Date: 2023-11-04
  Bugfixes:
    - Fixed a tiny error in the burner assembler texture
    - Reordered the changelog