@@ -2,6 +2,7 @@
 Version: 0.2.5
 Date: ????
   Changes:
+    - Soul-Burn's Janky Quality support.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.4
 Date: 2023-11-07
